--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0",
+    "mapbox-gl": "^3.14.0",
+    "motion": "^12.23.12",
     "next": "15.5.2",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-map-gl": "^8.0.4",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
