--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "drizzle-orm-pg": "^0.16.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "pg-connection-string": "^2.9.1",
     "socket.io": "^4.8.1"
