--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@10.12.4",
   "dependencies": {
     "@supabase/supabase-js": "^2.56.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
