--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.86.0",
+    "@tanstack/react-table": "^8.21.3",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
