--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.86.0",
     "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.12",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
@@ -35,10 +36,14 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-virtuoso": "^4.14.0",
+    "react-window": "^2.1.0",
     "recharts": "^3.1.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "use-debounce": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -46,6 +51,7 @@
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
