--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.4",
   "dependencies": {
+    "@google/genai": "^1.19.0",
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.56.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
