--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,8 @@
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "pg-connection-string": "^2.9.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
