adding admin pages and analytics

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "stripe": "stripe listen --forward-to localhost:8000/api/payment/webhook"
   },
   "keywords": [],
   "author": "",
