--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -1,30 +1,30 @@
 {
   "compilerOptions": {
-    /* Build info cache */
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
-    /* Language / environment */
     "target": "ES2022",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "moduleDetection": "force",
     "useDefineForClassFields": true,
     "jsx": "react-jsx",
 
-    /* Output */
+    /* Allow explicit .ts/.tsx import extensions (or remove extensions from imports) */
+    "allowImportingTsExtensions": true,
+    "moduleDetection": "force",
+    "allowJs": false,
+
+    /* No output from tsc; Vite handles bundling */
     "noEmit": true,
     "skipLibCheck": true,
 
-    /* Strictness */
-    "strict": true, // enable full type-safety
+    /* Type safety choices */
+    "strict": true,
     "noFallthroughCasesInSwitch": true,
 
-    /* Unused checks (disabled to silence TS6133) */
+    /* Turn off these checks so unused variables won't break CI builds */
     "noUnusedLocals": false,
     "noUnusedParameters": false,
 
-    /* Path aliases */
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
