--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-map-gl": "7.1.9",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "react-virtualized-auto-sizer": "^1.0.26",
@@ -50,6 +51,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
@@ -59,6 +61,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "mapbox-gl": "^2.15.0",
     "tw-animate-css": "^1.3.8",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
